--- a/packages/nodes-base/package.json
+++ b/packages/nodes-base/package.json
@@ -601,6 +601,26 @@
       "dist/nodes/TimescaleDb/TimescaleDb.node.js",
       "dist/nodes/Todoist/Todoist.node.js",
       "dist/nodes/Toggl/TogglTrigger.node.js",
+      "dist/nodes/ToolzzAttachStudents/ToolzzAttachStudents.node.js",
+      "dist/nodes/ToolzzItemPainelPerformaceUser/ToolzzItemPainelPerformaceUser.node.js",
+      "dist/nodes/ToolzzCatalog/ToolzzCatalog.node.js",
+      "dist/nodes/ToolzzCatalogOffiline/ToolzzCatalogOffiline.node.js",
+      "dist/nodes/ToolzzCreateStudentOnInstitution/ToolzzCreateStudentOnInstitution.node.js",
+      "dist/nodes/ToolzzCreateUser/ToolzzCreateUser.node.js",
+      "dist/nodes/ToolzzDetachStudents/ToolzzDetachStudents.node.js",
+      "dist/nodes/ToolzzInsertStudentOnClass/ToolzzInsertStudentOnClass.node.js",
+      "dist/nodes/ToolzzListAllUsersFromInstitution/ToolzzListAllUsersFromInstitution.node.js",
+      "dist/nodes/ToolzzListSchoolAndClasses/ToolzzListSchoolAndClasses.node.js",
+      "dist/nodes/ToolzzGetUserInfoByEmailOrUserId/ToolzzGetUserInfoByEmailOrUserId.node.js",
+      "dist/nodes/ToolzzLogin/ToolzzLogin.node.js",
+      "dist/nodes/ToolzzLogout/ToolzzLogout.node.js",
+      "dist/nodes/ToolzzPainelUser/ToolzzPainelUser.node.js",
+      "dist/nodes/ToolzzShowCourse/ToolzzShowCourse.node.js",
+      "dist/nodes/ToolzzShowLesson/ToolzzShowLesson.node.js",
+      "dist/nodes/ToolzzShowCourseWithSunToken/ToolzzShowCourseWithSunToken.node.js",
+      "dist/nodes/ToolzzShowPercentageUsersSchool/ToolzzShowPercentageUsersSchool.node.js",
+      "dist/nodes/ToolzzShowSchoolAndClassesBySchoollID/ToolzzShowSchoolAndClassesBySchoollID.node.js",
+      "dist/nodes/ToolzzShowUserInfo/ToolzzShowUserInfo.node.js",
       "dist/nodes/TravisCi/TravisCi.node.js",
       "dist/nodes/Trello/Trello.node.js",
       "dist/nodes/Trello/TrelloTrigger.node.js",
